lots of little changes (#18)
Co-authored-by: grandpopsmasterson <dave@recoverdynamics.com>