@@ -3,14 +3,13 @@ package com.recover.project.config;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer.FrameOptionsConfig;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -20,10 +19,7 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.servlet.handler.HandlerMappingIntrospector;
 
-import com.recover.project.utils.auth.AuthEntryPointJwt;
-import com.recover.project.utils.auth.AuthTokenFilter;
 import com.recover.project.utils.exceptions.CustomAccessDeniedHandler;
 
 import io.github.resilience4j.ratelimiter.RateLimiter;
@@ -37,75 +33,68 @@ import java.util.List;
 @EnableWebSecurity
 @EnableMethodSecurity
 public class SecurityConfiguration {
+    private final UserDetailsService userDetailsService;
+    private final AuthEntryPointJwt unauthorizedHandler;
+    private final String[] allowedOrigins;
+    private final String[] publicEndpoints;
+    private final AuthTokenFilter authTokenFilter;
 
-   private final UserDetailsService userDetailsService;
-   private final AuthEntryPointJwt unauthorizedHandler;
-   private final String[] allowedOrigins;
-
-   private static final String[] WHITE_LIST_URLS = {
-        "/error",
-        "/Auth/Login",   
-        "/api/Auth/SignUp",
-        "/h2-console/**",
-        "/api/auth/refresh-token"
-    };
-
-   public SecurityConfiguration(
-           UserDetailsService userDetailsService,
-           AuthEntryPointJwt unauthorizedHandler,
-           @Value("${cors.allowed-origins}") String[] allowedOrigins) {
-       this.userDetailsService = userDetailsService;
-       this.unauthorizedHandler = unauthorizedHandler;
-       this.allowedOrigins = allowedOrigins;
-   }
-
-   @Bean
-   public AuthTokenFilter authenticationJwtTokenFilter() {
-       return new AuthTokenFilter();
-   }
-
-   @Bean
+    public SecurityConfiguration(
+        UserDetailsService userDetailsService,
+        AuthEntryPointJwt unauthorizedHandler,
+        @Value("${cors.allowed-origins}") String[] allowedOrigins,
+        @Value("${security.public.endpoints}") String[] publicEndpoints,
+        AuthTokenFilter authTokenFilter
+    ) {
+        this.userDetailsService = userDetailsService;
+        this.unauthorizedHandler = unauthorizedHandler;
+        this.allowedOrigins = allowedOrigins;
+        this.publicEndpoints = publicEndpoints;
+        this.authTokenFilter = authTokenFilter;
+    }
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
+        return authConfig.getAuthenticationManager();
+    }
+    @Bean
     public RateLimiter authRateLimiter() {
         return RateLimiter.of("authLimiter", RateLimiterConfig.custom()
-                .limitForPeriod(5) // 5 requests allowed
-                .limitRefreshPeriod(Duration.ofSeconds(30)) // refresh every 30 seconds
-                .timeoutDuration(Duration.ofMillis(500)) // wait for a permit for up to 500 ms
-                .build());
+            .limitForPeriod(5)  // 5 requests allowed
+            .limitRefreshPeriod(Duration.ofSeconds(30))  // refresh every 30 seconds
+            .timeoutDuration(Duration.ofMillis(500))  // wait for a permit for up to 500 ms
+            .build());
     }
-
-   @Bean
-   public DaoAuthenticationProvider authenticationProvider() {
-       DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-       authProvider.setUserDetailsService(userDetailsService);
-       authProvider.setPasswordEncoder(passwordEncoder());
-       return authProvider;
-   }
-
-   @Bean
-   public PasswordEncoder passwordEncoder() {
-       return new BCryptPasswordEncoder(12);
-   }
-
-   @Bean
-   public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
-       return authConfig.getAuthenticationManager();
-   }
-
-   @Bean
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        return http
+            .csrf(AbstractHttpConfigurer::disable)
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .headers(headers -> headers
+                .frameOptions(FrameOptionsConfig::sameOrigin)
+                .contentSecurityPolicy(csp -> 
+                    csp.policyDirectives("default-src 'self'; frame-ancestors 'self';")))
+            .authorizeHttpRequests(req -> req
+                .requestMatchers(publicEndpoints).permitAll()
+                .anyRequest().authenticated())
+            .exceptionHandling(ex -> ex
+                .authenticationEntryPoint(unauthorizedHandler)
+                .accessDeniedHandler(new CustomAccessDeniedHandler()))
+            .sessionManagement(session -> 
+                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .addFilterBefore(authTokenFilter, UsernamePasswordAuthenticationFilter.class)
+            .build();
+    }
+    @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Arrays.asList(allowedOrigins));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList(
-            "Authorization",
-            "Content-Type",
-            "Accept",
-            "Origin",
-            "X-Requested-With"
+        configuration.setAllowedHeaders(List.of(
+            "Authorization", "Content-Type", "Accept", 
+            "Origin", "X-Requested-With"
         ));
-        configuration.setExposedHeaders(Arrays.asList(
-            "Authorization",
-            "Content-Type"
+        configuration.setExposedHeaders(List.of(
+            "Authorization", "Content-Type"
         ));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
@@ -114,28 +103,8 @@ public class SecurityConfiguration {
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-
-   @Bean
-   public SecurityFilterChain securityFilterChain(HttpSecurity http, HandlerMappingIntrospector introspector) throws Exception {
-       return http
-            .csrf(AbstractHttpConfigurer::disable)
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .headers(headers -> headers
-                .frameOptions(frame -> frame.sameOrigin())
-                .contentSecurityPolicy(csp -> 
-                    csp.policyDirectives("default-src 'self'; frame-ancestors 'self';")))
-            .authorizeHttpRequests(req -> req
-                // .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                .requestMatchers(WHITE_LIST_URLS).permitAll()
-                .anyRequest().authenticated())
-            .exceptionHandling(ex -> ex
-                .authenticationEntryPoint(unauthorizedHandler)
-                .accessDeniedHandler(new CustomAccessDeniedHandler()))
-            .sessionManagement(session -> 
-                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authenticationProvider(authenticationProvider())
-            .addFilterBefore(authenticationJwtTokenFilter(), 
-                UsernamePasswordAuthenticationFilter.class)
-            .build();
-   }
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder(12);
+    }
 }
